# geranos_parameter_estimation

./: CMakeLists.txt  package.xml
cfg/: EKF_Tuning.cfg
include/: functions.h  props_to_force.h
msg/: geranos_parameter_estimation.msg  ground_truth.msg
src/: functions.h  geranos_full_parameter_estimator.cpp  geranos_mass_jxy_comz_estimator.cpp  geranos_parameter_estimation_no_inertia.cpp  geranos_parameter_estimation_observable.cpp  geranos_parameter_estimator.cpp  ground_truth.cpp  test_client.cpp
